<resources>
    <string name="app_name">Gourmet lib</string>

    <!-- Login -->
    <string name="login_button">LOGIN</string>
    <string name="login_hint_card_number">Card number</string>
    <string name="login_hint_password">Password</string>
    <string name="login_remember_password">Remember pass</string>

    <!-- Balance -->
    <string name="logout_button">LOGOUT</string>
    <string name="current_text">Current balance:</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="offline_modification">Offline, last update: %s</string>
    <string name="price_euro">%s€</string>

    <!-- Notifications -->
    <plurals name="new_operations_title">
        <item quantity="one">New movement available</item>
        <item quantity="other">New movements available</item>
    </plurals>
    <plurals name="new_operations_text">
        <item quantity="one">You have %d new movement without consulting</item>
        <item quantity="other">You have %d new movements without consulting</item>
    </plurals>
    <string name="new_update_balance">They updated the card of diets!</string>

    <!-- Errors -->
    <string name="button_retry">Retry</string>
    <string name="error_session_expired">The session has expired.</string>
    <string name="error_not_user_or_pass_code1">Enter card number and password.</string>
    <string name="error_user_or_password_incorrect_code2">User or password incorrect.</string>
    <string name="error_connection_code3">Connection error. Please check your internet connection.</string>

    <!-- Dialog -->
    <string name="dialog_share_title">Share with</string>
    <string name="dialog_download_button">Download</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="dialog_title_last_version">New version</string>

    <!-- Menu -->
    <string name="menu_download_upload">Download update</string>
    <string name="menu_share_app">Share App</string>
    <string name="menu_search">Search</string>
    <string name="menu_web_site">Web site</string>
    <string name="menu_open_source">Open Source</string>
    <string name="menu_logout">Logout</string>

    <!-- Share -->
    <string name="share_text">Download the Gourmet App if you use ChequeGourmet - %s</string>

    <string name="search_error">There are not results for the search</string>
    <string name="search_hint">Search</string>
    <string name="search_not_result">No search results found</string>
</resources>
